--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
             <li class="item">
               <div class="features-icon">
                 <svg class="icon">
-                <use href="./images/symbol-defs.svg#icon-ant" class="ant"></use>
-              </svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-ant"
+                    class="ant"
+                  ></use>
+                </svg>
               </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
@@ -92,12 +95,14 @@
             </li>
 
             <li class="item">
-              <div class="features-icon"><svg class="icon">
-                <use
-                  href="./images/symbol-defs.svg#icon-clock"
-                  class="clock"
-                ></use>
-              </svg></div>
+              <div class="features-icon">
+                <svg class="icon">
+                  <use
+                    href="./images/symbol-defs.svg#icon-clock"
+                    class="clock"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -108,11 +113,11 @@
             <li class="item">
               <div class="features-icon">
                 <svg class="icon">
-                <use
-                  href="./images/symbol-defs.svg#icon-diagram"
-                  class="diagram"
-                ></use>
-              </svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-diagram"
+                    class="diagram"
+                  ></use>
+                </svg>
               </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
@@ -124,11 +129,11 @@
             <li class="item">
               <div class="features-icon">
                 <svg class="icon">
-                <use
-                  href="./images/symbol-defs.svg#icon-astronaut"
-                  class="icon-astronaut"
-                ></use>
-              </svg>
+                  <use
+                    href="./images/symbol-defs.svg#icon-astronaut"
+                    class="icon-astronaut"
+                  ></use>
+                </svg>
               </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
@@ -190,33 +195,46 @@
                 <ul class="icon-list list">
                   <li class="item-icon item">
                     <a href="https://www.instagram.com/" class="team-link">
-                      <svg class="team-icon"  width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      <svg class="team-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                          class="insta"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://twitter.com/" class="team-link">
                       <svg class="team-icon" width="20" height="16.25">
-                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://www.facebook.com/" class="team-link">
                       <svg class="team-icon" width="10" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon item">
                     <a href="https://www.linkedin.com/" class="team-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                 </ul>
+              </div>
+            </li>
+
             <li class="item">
               <img
                 src="images/img1.jpg"
@@ -230,29 +248,40 @@
                 <ul class="icon-list list">
                   <li class="item-icon item">
                     <a href="https://www.instagram.com/" class="team-link">
-                      <svg class="team-icon"  width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      <svg class="team-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                          class="insta"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://twitter.com/" class="team-link">
                       <svg class="team-icon" width="20" height="16.25">
-                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://www.facebook.com/" class="team-link">
                       <svg class="team-icon" width="10" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon item">
                     <a href="https://www.linkedin.com/" class="team-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -273,29 +302,40 @@
                 <ul class="icon-list list">
                   <li class="item-icon item">
                     <a href="https://www.instagram.com/" class="team-link">
-                      <svg class="team-icon"  width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      <svg class="team-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                          class="insta"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://twitter.com/" class="team-link">
                       <svg class="team-icon" width="20" height="16.25">
-                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://www.facebook.com/" class="team-link">
                       <svg class="team-icon" width="10" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon item">
                     <a href="https://www.linkedin.com/" class="team-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -316,29 +356,40 @@
                 <ul class="icon-list list">
                   <li class="item-icon item">
                     <a href="https://www.instagram.com/" class="team-link">
-                      <svg class="team-icon"  width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
+                      <svg class="team-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                          class="insta"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://twitter.com/" class="team-link">
                       <svg class="team-icon" width="20" height="16.25">
-                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon">
                     <a href="https://www.facebook.com/" class="team-link">
                       <svg class="team-icon" width="10" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                          class="aaa"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="item-icon item">
                     <a href="https://www.linkedin.com/" class="team-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -354,7 +405,7 @@
       <div class="conteiner">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="clients-list list">
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo"></use>
@@ -362,7 +413,7 @@
             </a>
           </li>
 
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
@@ -370,7 +421,7 @@
             </a>
           </li>
 
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
@@ -378,7 +429,7 @@
             </a>
           </li>
 
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
@@ -386,7 +437,7 @@
             </a>
           </li>
 
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
@@ -394,7 +445,7 @@
             </a>
           </li>
 
-          <li class="item clients"> 
+          <li class="item clients">
             <a href="index.html" class="clients-link">
               <svg class="client-icon">
                 <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
@@ -409,63 +460,72 @@
       <div class="conteiner footer-box">
         <div>
           <a href="index.html" class="logo">
-          Web<span class="logo-light">Studio</span>
-        </a>
-        <address>
-          <ul class="address list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/vd8JTUUMNeQ3kda19ddres"
-                class="address"
-              >
-                г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="address-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="address-link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+            Web<span class="logo-light">Studio</span>
+          </a>
+          <address>
+            <ul class="address list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/vd8JTUUMNeQ3kda19ddres"
+                  class="address"
+                >
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="address-link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
         <!-- ==========присоединяйтесь=============== -->
         <div class="join-box">
           <h2 class="join-title">присоединяйтесь</h2>
-        <ul class="join list">
-              <li class="item-icon item">
-                    <a href="https://www.instagram.com/" class="join-link">
-                      <svg class="join-icon"  width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram" class="insta"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="item-icon">
-                    <a href="https://twitter.com/" class="join-link">
-                      <svg class="join-icon" width="20" height="16.25">
-                        <use href="./images/symbol-defs.svg#icon-twitter" class="aaa"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="item-icon">
-                    <a href="https://www.facebook.com/" class="join-link">
-                      <svg class="join-icon" width="10" height="20">
-                        <use href="./images/symbol-defs.svg#icon-facebook" class="aaa"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="item-icon item">
-                    <a href="https://www.linkedin.com/" class="join-link">
-                      <svg class="join-icon" width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
+          <ul class="join list">
+            <li class="item-icon item">
+              <a href="https://www.instagram.com/" class="join-link">
+                <svg class="join-icon" width="20" height="20">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram"
+                    class="insta"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-icon">
+              <a href="https://twitter.com/" class="join-link">
+                <svg class="join-icon" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-twitter"
+                    class="aaa"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-icon">
+              <a href="https://www.facebook.com/" class="join-link">
+                <svg class="join-icon" width="10" height="20">
+                  <use
+                    href="./images/symbol-defs.svg#icon-facebook"
+                    class="aaa"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-icon item">
+              <a href="https://www.linkedin.com/" class="join-link">
+                <svg class="join-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
